--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "16.11.0",
     "react-chartjs-2": "2.8.0",
     "react-dom": "16.11.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.4.3",
     "uuid": "3.3.3"
   },
   "scripts": {
